gccida/g3/gen_split_959
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_959/src/insn-emit.c:8799:21: error: use of undeclared identifier 'machine_mode'
v1 = gen_lowpart( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), operands[1]); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_959/src/insn-emit.c:8803:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_lowpart( ( machine_mode)( !v2 + 4), v3); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_959/src/insn-emit.c:8807:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_lowpart( ( machine_mode)( !v2 + 4), v5); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_959/src/obj/insn-emit.o] Error 1
